--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sea Crypto Fx</title>
+  <title>Angularjs in Git</title>
   <link rel="icon" type="image/png" href="assets/images/favicon.png" sizes="16x16">
   <!-- bootstrap 4  -->
   <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
